# Asins

./: .gitignore  ASINSmain.m
ASINS-cpp/: .gitignore  I2C_Pin_Mapping.txt  Project.uvguix.Administrator  Project.uvguix.zzz19  Project.uvprojx  Project_Design_and_Protocol.txt  README.txt  Target 1.BAT
ASINS-cpp/Hardware/: ICM20602.cpp  ICM20602.h  ICM20602_Reg.h
ASINS-cpp/Start/: core_cm3.c
ASINS-cpp/System/: Delay.cpp  Delay.h
ASINS-cpp/User/: GpioPin.h  MyI2C.cpp  MyI2C.h  Philosophy_of_Compile_Time_Optimization.md  Serial.cpp  Serial.h  cpp_main.cpp  cpp_main.h  main.cpp  main.h  stm32f10x_it.cpp
SerialData/: decoder.m
SharedFolder/: .gitignore  .gitmodules  gitcmd.txt  sync.bat
SharedFolder/ArrayDC/: CMakeLists.txt  async_logger.cpp  async_logger.h  data_processor.cpp  data_processor.h  ins_solver.cpp  ins_solver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol_parser.cpp  protocol_parser.h  replay_thread.cpp  replay_thread.h
SharedFolder/CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  INS_velocity_error_equation.md  VMware_Tools_Install_Guide.md  main
SharedFolder/PyMatrixProject/: CMakeLists.txt  README.md  build.sh  build_optimized.sh  setup.py
SharedFolder/PyMatrixProject/examples/: benchmark.py  simple_demo.py
SharedFolder/PyMatrixProject/include/pymatrix/: Matrix.hpp
SharedFolder/PyMatrixProject/scripts/: install_module.py.in
SharedFolder/PyMatrixProject/src/: CMakeLists.txt  Matrix.cpp  bindings.cpp
SharedFolder/PyMatrixProject/tests/: CMakeLists.txt  test_core.cpp
